--- a/package.json
+++ b/package.json
@@ -7,11 +7,16 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "axios": "^1.9.0",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.10",
     "express": "^4.18.2",
+    "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.2.2"
+    "mongoose": "^7.2.2",
+    "multer": "^1.4.5-lts.2",
+    "path": "^0.12.7"
   }
 }
